[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# https://black.readthedocs.io/en/stable/pyproject_toml.html#configuration-format
[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.egg-info     # root of the project
    | \.git
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
  | /(
      \.direnv
    | \.vscode
    | \.envrc
    | \.python
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.tox]
# annoying that we have to do this, but... https://tox.readthedocs.io/en/latest/example/basic.html
legacy_tox_ini = """
[tox]
skipsdist = true
envlist =
    flake8
    py37

[testenv]
usedevelop = true
basepython =
    py37: python3.7
deps =
    #cython
    #numpy
    check-manifest
    readme_renderer
    docutils
    pytest
commands =
    check-manifest --ignore tox.ini,tests*
    python setup.py build_ext --inplace
    python setup.py check -m -r -s
    py.test tests

[testenv:benchmark]
skipsdist = true
usedevelop = true
basepython = python3.7
changedir = {toxinidir}
deps =
    #cython
    #numpy
    pytest
    pytest-benchmark
commands =
    py.test benchmark

[testenv:flake8]
skipsdist = true
skip_install = true
usedevelop = false
basepython = python3.7
deps = flake8
changedir = {toxinidir}
commands = flake8 .

[testenv:release]
skipsdist = true
skip_install = true
usedevelop = false
basepython = python3.7
changedir = {toxinidir}
deps =
    #cython
    #numpy
    wheel
    twine
whitelist_externals =
commands =
    # Make sure no old builds create conflicts/confusion for twine
    {toxinidir}/scripts/clean
    # Build and upload
    python setup.py sdist
    twine upload dist/*
passenv =
    TWINE_USERNAME
    TWINE_PASSWORD
    TWINE_REPOSITORY
    TWINE_REPOSITORY_URL

"""

[tool.isort]
profile = "black"
